--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,5 @@ jobs:
     steps:
      - uses: actions/checkout@v1
      - run: |
-        echo "A initial message"
+        commit=$(date +%s)
+        echo $commit
