--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,3 +9,9 @@ jobs:
      - run: |
         commit=$(date +%s)
         echo $commit
+        git pull
+        perl -p -i -e "s/Results[0-9]+/Results$commit/g" ~/hungryman/hungryman-ui/src/DiningSearches.js
+        git add .
+        git commit -m $commit
+        git push
+        
