--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
      - run: |
         commit=$(date +%s)
         echo $commit
+        git config --global user.email "vipins2@vmware.com"
+        git config --global user.name "Vipin M S"
         git checkout main
         git pull
         perl -p -i -e "s/Results[0-9]+/Results$commit/g" ~/hungryman/hungryman-ui/src/DiningSearches.js
