Revert "Update httpproxy.yaml"
This reverts commit f4465f79c433fe381d184006e0e127db9f5b4689.

--- a/where-for-dinner-ui/httpproxy.yaml
+++ b/where-for-dinner-ui/httpproxy.yaml
@@ -4,7 +4,7 @@ metadata:
   name: where-for-dinner
 spec:
   virtualhost:
-    fqdn: wfd.perfect300rock.com
+    fqdn: where-for-dinner.perfect300rock.com
   routes:
     - services:
       - name: where-for-dinner-api-gateway
