--- a/where-for-dinner-api-gateway/config/workload.yaml
+++ b/where-for-dinner-api-gateway/config/workload.yaml
@@ -1,7 +1,7 @@
 apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
-  name: wfd
+  name: where-for-dinner
   labels:
     apps.tanzu.vmware.com/workload-type: web
     app.kubernetes.io/part-of: where-for-dinner-api-gateway
