--- a/where-for-dinner-api-gateway/config/workload.yaml
+++ b/where-for-dinner-api-gateway/config/workload.yaml
@@ -11,9 +11,16 @@ spec:
   - name: annotations
     value:
       autoscaling.knative.dev/minScale: "1"
+  resources:     
+    requests:         
+      memory: "500M"
+      cpu: "100m"
+    limits:         
+      memory: "750M"
+      cpu: "1000m" 
   source:
     git:
-      url: <https URL for your generated project's Git repository>
+      url: https://github.com/vipinms2/where-for-dinner-app
       ref:
         branch: main
     subPath: where-for-dinner-api-gateway
