--- a/where-for-dinner-notify/config/workload.yaml
+++ b/where-for-dinner-notify/config/workload.yaml
@@ -18,6 +18,13 @@ spec:
       apiVersion: services.apps.tanzu.vmware.com/v1alpha1
       kind: ResourceClaim
       name: rmq-where-for-dinner
+  resources:     
+    requests:         
+      memory: "500M"
+      cpu: "100m"
+    limits:         
+      memory: "750M"
+      cpu: "1000m" 
   source:
     git:
       url: <https URL for your generated project's Git repository>
