--- a/where-for-dinner-search-proc/config/workload-server.yaml
+++ b/where-for-dinner-search-proc/config/workload-server.yaml
@@ -1,11 +1,11 @@
 apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
-  name: where-for-dinner-availability
+  name: where-for-dinner-search-proc
   labels:
-    apps.tanzu.vmware.com/workload-type: web
-    app.kubernetes.io/part-of: where-for-dinner-availability
+    apps.tanzu.vmware.com/workload-type: worker
     apps.tanzu.vmware.com/auto-configure-actuators: "true"
+    app.kubernetes.io/part-of: where-for-dinner-search-proc
     networking.knative.dev/visibility: cluster-local
 spec:
   params:
@@ -30,4 +30,4 @@ spec:
       url: <https URL for your generated project's Git repository>
       ref:
         branch: main
-    subPath: where-for-dinner-availability
+    subPath: where-for-dinner-search-proc
