--- a/where-for-dinner-search/config/workload-server.yaml
+++ b/where-for-dinner-search/config/workload-server.yaml
@@ -1,17 +1,22 @@
 apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
-  name: where-for-dinner-availability
+  name: where-for-dinner-search
   labels:
-    apps.tanzu.vmware.com/workload-type: web
-    app.kubernetes.io/part-of: where-for-dinner-availability
+    apps.tanzu.vmware.com/workload-type: server
     apps.tanzu.vmware.com/auto-configure-actuators: "true"
+    app.kubernetes.io/part-of: where-for-dinner-search
     networking.knative.dev/visibility: cluster-local
 spec:
   params:
   - name: annotations
     value:
       autoscaling.knative.dev/minScale: "1"
+  - name: ports	
+    value:	
+    - port: 80	
+      containerPort: 8080	
+      name: http
   serviceClaims:
   - name: rmq
     ref:
@@ -30,4 +35,4 @@ spec:
       url: <https URL for your generated project's Git repository>
       ref:
         branch: main
-    subPath: where-for-dinner-availability
+    subPath: where-for-dinner-search
