--- a/where-for-dinner-search/pom.xml
+++ b/where-for-dinner-search/pom.xml
@@ -17,7 +17,7 @@
 		<java.version>11</java.version>
 		<spring-cloud.version>2021.0.5</spring-cloud.version>
 		<revision>0.0.1-SNAPSHOT</revision>		
-		<spring-cloud-bindings.version>1.10.0</spring-cloud-bindings.version>
+		<spring-cloud-bindings.version>1.11.0</spring-cloud-bindings.version>
 		<snakeyaml.version>1.32</snakeyaml.version>
 	</properties>
 	<dependencyManagement>
@@ -108,7 +108,7 @@
     <repositories>
         <repository>
             <id>spring-releases</id>
-            <url>https://repo.spring.io/release/</url>
+            <url>https://repo1.maven.org/maven2</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
